<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="abc.com.example.vijsu.rentals.Activities.FilterForSearchActivity">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_maxMinSeek"
        app:cardUseCompatPadding="true"
        app:cardElevation="5dp"
        app:cardCornerRadius="3dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/maxMinSeek"
            android:padding="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/maxMinRent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/monthlyRent"
                    android:text="@string/monthlyRent"
                    android:gravity="center"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/monthlyRent"
                    android:id="@+id/minRentParent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Min"
                        android:text="@string/Min"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minAmt"
                        android:layout_toEndOf="@id/Min"
                        android:layout_toRightOf="@id/Min"
                        android:text="$100"
                        android:textColor="@color/colorAccent"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxRentParent"
                    android:layout_below="@+id/monthlyRent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Max"
                        android:text="@string/Max"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/maxAmt"
                        android:layout_toEndOf="@id/Max"
                        android:layout_toRightOf="@id/Max"
                        android:text="$ 1000+"
                        android:textColor="@color/colorAccent"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarParent"
                android:layout_below="@id/maxMinRent">
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarRent"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_tenantType"
    android:layout_below="@id/card_maxMinSeek"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp"
    app:cardCornerRadius="3dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maxMinSeek"
        android:id="@+id/tenantTypeParent"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="5dp"
        app:cardCornerRadius="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/tenantType"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textSize="17sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_tenantType"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="33dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_tenantType_boys"
                android:text="@string/boys"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_tenantType_girls"
                android:text="@string/girls"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_tenantType_family"
                android:text="@string/Family"
                android:layout_weight="1"/>
        </RadioGroup>
    </RelativeLayout>
</android.support.v7.widget.CardView>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_furnish"
    android:layout_below="@id/card_tenantType"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp"
    app:cardCornerRadius="3dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tenantTypeParent"
        android:id="@+id/furnishTypeParent"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/furnishingType"
            android:text="@string/furnishingType"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textSize="17sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_furnishingType"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="33dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_furnishType_full"
                android:text="@string/fullfurnished"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:id="@+id/rb_furnishType_semi"
                android:text="@string/semifurnished" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_furnishType_unfurnish"
                android:text="@string/unfurnished" />
        </RadioGroup>
    </RelativeLayout>
</android.support.v7.widget.CardView>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_bhk"
    android:layout_below="@id/card_furnish"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp"
    app:cardCornerRadius="3dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bhkParent"
        android:layout_below="@id/furnishTypeParent"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BHK"
            android:text="@string/bhk"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textSize="17sp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/noOfBhk"
            android:layout_below="@id/BHK"
            android:layout_centerHorizontal="true"
            android:entries="@array/noOfRooms"
            android:gravity="center_horizontal"
            android:background="@drawable/rectangle" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_apply"
        android:text="@string/apply"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
